request assembly at endpoints /annotate and /variants_in_region
